--- a/Q&A-and-RAG-with-SQL-and-TabularData/explore/4_query_and_QA_sqldb_from_csv.ipynb
+++ b/Q&A-and-RAG-with-SQL-and-TabularData/explore/4_query_and_QA_sqldb_from_csv.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,11 +19,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(887, 8)\n",
+      "['Survived', 'Pclass', 'Name', 'Sex', 'Age', 'Siblings/Spouses Aboard', 'Parents/Children Aboard', 'Fare']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Survived</th>\n",
+       "      <th>Pclass</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Siblings/Spouses Aboard</th>\n",
+       "      <th>Parents/Children Aboard</th>\n",
+       "      <th>Fare</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Mr. Owen Harris Braund</td>\n",
+       "      <td>male</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7.2500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Mrs. John Bradley (Florence Briggs Thayer) Cum...</td>\n",
+       "      <td>female</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>71.2833</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Miss. Laina Heikkinen</td>\n",
+       "      <td>female</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7.9250</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Survived  Pclass                                               Name  \\\n",
+       "0         0       3                             Mr. Owen Harris Braund   \n",
+       "1         1       1  Mrs. John Bradley (Florence Briggs Thayer) Cum...   \n",
+       "2         1       3                              Miss. Laina Heikkinen   \n",
+       "\n",
+       "      Sex   Age  Siblings/Spouses Aboard  Parents/Children Aboard     Fare  \n",
+       "0    male  22.0                        1                        0   7.2500  \n",
+       "1  female  38.0                        1                        0  71.2833  \n",
+       "2  female  26.0                        0                        0   7.9250  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "df = pd.read_csv(here(\"data/for upload/titanic.csv\"))\n",
+    "df = pd.read_csv(here(\"data/for_upload/titanic.csv\"))\n",
     "print(df.shape)\n",
     "print(df.columns.tolist())\n",
     "display(df.head(3))"
@@ -42,9 +135,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "887"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from langchain_community.utilities import SQLDatabase\n",
     "from sqlalchemy import create_engine\n",
@@ -68,9 +172,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sqlite\n",
+      "['titanic']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\"[(1, 2, 'Master. Alden Gates Caldwell', 'male', 0.83, 0, 2, 29.0), (0, 3, 'Master. Eino Viljami Panula', 'male', 1.0, 4, 1, 39.6875), (1, 3, 'Miss. Eleanor Ileen Johnson', 'female', 1.0, 1, 1, 11.1333), (1, 2, 'Master. Richard F Becker', 'male', 1.0, 2, 1, 39.0), (1, 1, 'Master. Hudson Trevor Allison', 'male', 0.92, 1, 2, 151.55), (1, 3, 'Miss. Maria Nakid', 'female', 1.0, 0, 2, 15.7417), (0, 3, 'Master. Sidney Leonard Goodwin', 'male', 1.0, 5, 2, 46.9), (1, 3, 'Miss. Helene Barbara Baclini', 'female', 0.75, 2, 1, 19.2583), (1, 3, 'Miss. Eugenie Baclini', 'female', 0.75, 2, 1, 19.2583), (1, 2, 'Master. Viljo Hamalainen', 'male', 0.67, 1, 1, 14.5), (1, 3, 'Master. Bertram Vere Dean', 'male', 1.0, 1, 2, 20.575), (1, 3, 'Master. Assad Alexander Thomas', 'male', 0.42, 0, 1, 8.5167), (1, 2, 'Master. Andre Mallet', 'male', 1.0, 0, 2, 37.0042), (1, 2, 'Master. George Sibley Richards', 'male', 0.83, 1, 1, 18.75)]\""
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "db = SQLDatabase(engine=engine)\n",
     "print(db.dialect)\n",
@@ -79,10 +202,246 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "**Equivalent in Pandas**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Survived</th>\n",
+       "      <th>Pclass</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Siblings/Spouses Aboard</th>\n",
+       "      <th>Parents/Children Aboard</th>\n",
+       "      <th>Fare</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>77</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Master. Alden Gates Caldwell</td>\n",
+       "      <td>male</td>\n",
+       "      <td>0.83</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>29.0000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>163</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Master. Eino Viljami Panula</td>\n",
+       "      <td>male</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>39.6875</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>171</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Miss. Eleanor Ileen Johnson</td>\n",
+       "      <td>female</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>11.1333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>182</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Master. Richard F Becker</td>\n",
+       "      <td>male</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>39.0000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>303</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Master. Hudson Trevor Allison</td>\n",
+       "      <td>male</td>\n",
+       "      <td>0.92</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>151.5500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>379</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Miss. Maria Nakid</td>\n",
+       "      <td>female</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>15.7417</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>384</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Master. Sidney Leonard Goodwin</td>\n",
+       "      <td>male</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>46.9000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>466</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Miss. Helene Barbara Baclini</td>\n",
+       "      <td>female</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>19.2583</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>641</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Miss. Eugenie Baclini</td>\n",
+       "      <td>female</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>19.2583</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>751</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Master. Viljo Hamalainen</td>\n",
+       "      <td>male</td>\n",
+       "      <td>0.67</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>14.5000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>784</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Master. Bertram Vere Dean</td>\n",
+       "      <td>male</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>20.5750</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>799</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Master. Assad Alexander Thomas</td>\n",
+       "      <td>male</td>\n",
+       "      <td>0.42</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8.5167</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>823</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Master. Andre Mallet</td>\n",
+       "      <td>male</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>37.0042</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>827</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Master. George Sibley Richards</td>\n",
+       "      <td>male</td>\n",
+       "      <td>0.83</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>18.7500</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Survived  Pclass                            Name     Sex   Age  \\\n",
+       "77          1       2    Master. Alden Gates Caldwell    male  0.83   \n",
+       "163         0       3     Master. Eino Viljami Panula    male  1.00   \n",
+       "171         1       3     Miss. Eleanor Ileen Johnson  female  1.00   \n",
+       "182         1       2        Master. Richard F Becker    male  1.00   \n",
+       "303         1       1   Master. Hudson Trevor Allison    male  0.92   \n",
+       "379         1       3               Miss. Maria Nakid  female  1.00   \n",
+       "384         0       3  Master. Sidney Leonard Goodwin    male  1.00   \n",
+       "466         1       3    Miss. Helene Barbara Baclini  female  0.75   \n",
+       "641         1       3           Miss. Eugenie Baclini  female  0.75   \n",
+       "751         1       2        Master. Viljo Hamalainen    male  0.67   \n",
+       "784         1       3       Master. Bertram Vere Dean    male  1.00   \n",
+       "799         1       3  Master. Assad Alexander Thomas    male  0.42   \n",
+       "823         1       2            Master. Andre Mallet    male  1.00   \n",
+       "827         1       2  Master. George Sibley Richards    male  0.83   \n",
+       "\n",
+       "     Siblings/Spouses Aboard  Parents/Children Aboard      Fare  \n",
+       "77                         0                        2   29.0000  \n",
+       "163                        4                        1   39.6875  \n",
+       "171                        1                        1   11.1333  \n",
+       "182                        2                        1   39.0000  \n",
+       "303                        1                        2  151.5500  \n",
+       "379                        0                        2   15.7417  \n",
+       "384                        5                        2   46.9000  \n",
+       "466                        2                        1   19.2583  \n",
+       "641                        2                        1   19.2583  \n",
+       "751                        1                        1   14.5000  \n",
+       "784                        1                        2   20.5750  \n",
+       "799                        0                        1    8.5167  \n",
+       "823                        0                        2   37.0042  \n",
+       "827                        1                        1   18.7500  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df[df[\"Age\"]<2]"
    ]
@@ -96,19 +455,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Environment variables are loaded: True\n",
+      "test by reading a variable: azure\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "from dotenv import load_dotenv\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")\n",
     "print(\"Environment variables are loaded:\", load_dotenv())\n",
     "print(\"test by reading a variable:\", os.getenv(\"OPENAI_API_TYPE\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,29 +506,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new SQL Agent Executor chain...\u001b[0m\n",
+      "\u001b[32;1m\u001b[1;3m\n",
+      "Invoking: `sql_db_list_tables` with `{}`\n",
+      "\n",
+      "\n",
+      "\u001b[0m\u001b[38;5;200m\u001b[1;3mtitanic\u001b[0m\u001b[32;1m\u001b[1;3m\n",
+      "Invoking: `sql_db_schema` with `{'table_names': 'titanic'}`\n",
+      "\n",
+      "\n",
+      "\u001b[0m\u001b[33;1m\u001b[1;3m\n",
+      "CREATE TABLE titanic (\n",
+      "\t\"Survived\" BIGINT, \n",
+      "\t\"Pclass\" BIGINT, \n",
+      "\t\"Name\" TEXT, \n",
+      "\t\"Sex\" TEXT, \n",
+      "\t\"Age\" FLOAT, \n",
+      "\t\"Siblings/Spouses Aboard\" BIGINT, \n",
+      "\t\"Parents/Children Aboard\" BIGINT, \n",
+      "\t\"Fare\" FLOAT\n",
+      ")\n",
+      "\n",
+      "/*\n",
+      "3 rows from titanic table:\n",
+      "Survived\tPclass\tName\tSex\tAge\tSiblings/Spouses Aboard\tParents/Children Aboard\tFare\n",
+      "0\t3\tMr. Owen Harris Braund\tmale\t22.0\t1\t0\t7.25\n",
+      "1\t1\tMrs. John Bradley (Florence Briggs Thayer) Cumings\tfemale\t38.0\t1\t0\t71.2833\n",
+      "1\t3\tMiss. Laina Heikkinen\tfemale\t26.0\t0\t0\t7.925\n",
+      "*/\u001b[0m\u001b[32;1m\u001b[1;3m\n",
+      "Invoking: `sql_db_query` with `{'query': 'SELECT AVG(Age) AS AverageAge FROM titanic WHERE Survived = 1'}`\n",
+      "responded: Based on the schema of the \"titanic\" table, I can see that there is an \"Age\" column. I can use this column to calculate the average age of the survivors. Let me construct the query for you.\n",
+      "\n",
+      "\u001b[0m\u001b[36;1m\u001b[1;3m[(28.408391812865496,)]\u001b[0m\u001b[32;1m\u001b[1;3mThe average age of the survivors is approximately 28.41 years.\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'input': \"what's the average age of survivors\",\n",
+       " 'output': 'The average age of the survivors is approximately 28.41 years.'}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "agent_executor.invoke({\"input\": \"what's the average age of survivors\"})"
+    "agent_executor.invoke({\"input\": \"what's the average age of survivors\"})\n",
+    "# agent_executor.invoke({\"what's the average age of survivors\"})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "28.408391812865496"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "agent_executor.invoke({\"what's the average age of survivors\"})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "agent_executor.invoke({\"input\": \"what's the average age of survivors\"})"
+    "# Equivalence in Pandas\n",
+    "df[df[\"Survived\"]==1][\"Age\"].mean()"
    ]
   }
  ],
