--- a/Q&A-and-RAG-with-SQL-and-TabularData/explore/5_RAG_with_tabular_data.ipynb
+++ b/Q&A-and-RAG-with-SQL-and-TabularData/explore/5_RAG_with_tabular_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,12 +53,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Create a collection for data injection**"
+    "**Create a collection for data injection**\n",
+    "\n",
+    "Throws an error if the table already exists"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +189,7 @@
        "4    male   35                        0                        0   8.0500  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +245,7 @@
        " 'Survived: 0,\\nPclass: 3,\\nName: Mr. William Henry Allen,\\nSex: male,\\nAge: 35,\\nSiblings/Spouses Aboard: 0,\\nParents/Children Aboard: 0,\\nFare: 8.05,\\n']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -273,25 +275,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[-0.005509279202669859,\n",
-       " -0.019893482327461243,\n",
-       " -0.017736192792654037,\n",
-       " -0.025068243965506554,\n",
-       " 0.010083277709782124,\n",
-       " 0.034653160721063614,\n",
-       " -0.013264596462249756,\n",
-       " -0.0008772520232014358,\n",
-       " -0.024890746921300888,\n",
-       " -0.0176952313631773]"
+       "[-0.005476914346218109,\n",
+       " -0.019898656755685806,\n",
+       " -0.0172883253544569,\n",
+       " -0.025160321965813637,\n",
+       " 0.010256828740239143,\n",
+       " 0.03452198579907417,\n",
+       " -0.013304493390023708,\n",
+       " -0.0008212808752432466,\n",
+       " -0.024927988648414612,\n",
+       " -0.017629992216825485]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,16 +402,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5"
+       "30"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,14 +423,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'ids': [['id0']],\n",
-       " 'distances': [[0.40601093295313295]],\n",
+       " 'distances': [[0.4056195393341294]],\n",
        " 'metadatas': [[{'source': 'titanic_small'}]],\n",
        " 'embeddings': None,\n",
        " 'documents': [['Survived: 0,\\nPclass: 3,\\nName: Mr. Owen Harris Braund,\\nSex: male,\\nAge: 22,\\nSiblings/Spouses Aboard: 1,\\nParents/Children Aboard: 0,\\nFare: 7.25,\\n']],\n",
@@ -436,7 +438,7 @@
        " 'data': None}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +446,7 @@
    "source": [
     "results = vectordb.query(\n",
     "    query_embeddings = query_embeddings,\n",
-    "    n_results=1\n",
+    "    n_results=1 #top_k\n",
     ")\n",
     "\n",
     "results"
@@ -459,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,22 +490,150 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Owen Harris is a male passenger who was aboard the Titanic. According to the available information, Owen Harris Braund was 22 years old and did not survive the Titanic disaster. He was in third class (Pclass: 3) and was traveling alone, without any parents or children aboard. He had one sibling or spouse aboard the ship. The fare for his ticket was 7.25.'"
+       "'According to the search results, Owen Harris is a male passenger who did not survive the Titanic disaster. He was in third class, 22 years old, and traveling alone. His full name is Mr. Owen Harris Braund. His record shows that he had one sibling or spouse aboard and no parents or children. The fare he paid for his ticket was 7.25.'"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "response.choices[0].message.content"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Fact check**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Survived</th>\n",
+       "      <th>Pclass</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Siblings/Spouses Aboard</th>\n",
+       "      <th>Parents/Children Aboard</th>\n",
+       "      <th>Fare</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Mr. Owen Harris Braund</td>\n",
+       "      <td>male</td>\n",
+       "      <td>22</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7.2500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Mrs. John Bradley (Florence Briggs Thayer) Cum...</td>\n",
+       "      <td>female</td>\n",
+       "      <td>38</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>71.2833</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Miss. Laina Heikkinen</td>\n",
+       "      <td>female</td>\n",
+       "      <td>26</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7.9250</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Mrs. Jacques Heath (Lily May Peel) Futrelle</td>\n",
+       "      <td>female</td>\n",
+       "      <td>35</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>53.1000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Mr. William Henry Allen</td>\n",
+       "      <td>male</td>\n",
+       "      <td>35</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8.0500</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Survived  Pclass                                               Name  \\\n",
+       "0         0       3                             Mr. Owen Harris Braund   \n",
+       "1         1       1  Mrs. John Bradley (Florence Briggs Thayer) Cum...   \n",
+       "2         1       3                              Miss. Laina Heikkinen   \n",
+       "3         1       1        Mrs. Jacques Heath (Lily May Peel) Futrelle   \n",
+       "4         0       3                            Mr. William Henry Allen   \n",
+       "\n",
+       "      Sex  Age  Siblings/Spouses Aboard  Parents/Children Aboard     Fare  \n",
+       "0    male   22                        1                        0   7.2500  \n",
+       "1  female   38                        1                        0  71.2833  \n",
+       "2  female   26                        0                        0   7.9250  \n",
+       "3  female   35                        1                        0  53.1000  \n",
+       "4    male   35                        0                        0   8.0500  "
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
    ]
   }
  ],
@@ -523,7 +653,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
