--- a/Q&A-and-RAG-with-SQL-and-TabularData/explore/xplr_databases/xplr_cancer.ipynb
+++ b/Q&A-and-RAG-with-SQL-and-TabularData/explore/xplr_databases/xplr_cancer.ipynb
@@ -12,16 +12,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(here(\"data/csv/cancer.csv\"))"
+    "df = pd.read_csv(here(\"data/csv_xlsx/cancer.csv\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
        "2.366336633663366"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
