--- a/Q&A-and-RAG-with-SQL-and-TabularData/explore/xplr_databases/xplr_diabetes.ipynb
+++ b/Q&A-and-RAG-with-SQL-and-TabularData/explore/xplr_databases/xplr_diabetes.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -100,19 +100,19 @@
        "2                     0.672   32        1  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(here(\"data/csv/diabetes.csv\"))\n",
+    "df = pd.read_csv(here(\"data/csv_xlsx/diabetes.csv\"))\n",
     "df.head(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
