--- a/Q&A-and-RAG-with-SQL-and-TabularData/explore/xplr_databases/xplr_sqldb.ipynb
+++ b/Q&A-and-RAG-with-SQL-and-TabularData/explore/xplr_databases/xplr_sqldb.ipynb
@@ -13,17 +13,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "db_path = str(here(\"data\")) + \"/Chinook.db\"\n",
+    "db_path = str(here(\"data\")) + \"/sqldb.db\"\n",
     "db_path = f\"sqlite:///{db_path}\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
